# rustamanga-mangalib-parser

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  amvera.yml
resource/json/: mangalib_manga_list.json
src/: command.rs  config.rs  main.rs  mangalib.rs  processing.rs  rabbitmq_consumer.rs  send_resource.rs  server.rs  telegraph.rs
src/config/: mod.rs
src/mangalib/: builder.rs  search.rs
src/server/: mod.rs
src/telegraph/: methods.rs  types.rs
src/telegraph/methods/: account.rs  page.rs
