[package]
name = "rustamanga-mangalib-parser"
version = "0.8.3"
edition = "2024"
authors = ["Filipponik"]
description = "Mangalib scrapper"
readme = "README.md"
repository = "https://github.com/Filipponik/mangalib-parser"
keywords = ["axum-rs", "server", "web-server", "mangalib"]
categories = ["web-programming", "web-programming::http-server", "command-line-interface", "api-bindings"]

[profile.release]
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"] }
futures = "0.3.30"
axum = "0.8.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
clap = "4.5.21"
lapin = "2.5.0"
thiserror = "2.0.8"
async-stream = "0.3.6"
governor = "0.10.0"
tracing-appender = "0.2.3"
once_cell = "1.21.3"
